--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="header-main">
             <div class="title">
-            <h1>Selamat Datang di<br>Progate C-15</h1>
+            <h1>Selamat Datang di<br><span>Progate C-15</span></h1>
             <p>Progate C-15 adalah perkumpulan semasa untuk belajar bersama<br>
             Kami menawarkan pembelajaran yang komprehensif dan menyenangkan</p>
             <div class="btn">
